feat: added mainfest file, icons and serviceworker.js

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,12 @@ html {
 }
 
 body {
-  color: $yellow;
-  background: $violet;
+  background: $oceanblue;
+}
+
+.main {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
