feat: create grid for elements, set colors

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:500&display=swap&subset=latin-ext');
+
+//colors
+$lightblue: #2196F3;
+$lightgrey: #F5E5E7;
 $oceanblue: #3767AD;
 $white: #FFFFFF;
+
+//fonts
+$robotFont: 'Roboto', sans-serif;
