--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,13 @@
 @import "_normalize";
 @import "_variables";
 
-
 html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -25,9 +26,10 @@ body {
   max-width: 280px;
   margin: 0px auto;
   display: grid;
-  grid-template-areas: "glass"
-   "add" 
-   "remove";
+  grid-template-areas:
+    "glass"
+    "add"
+    "remove";
   grid-column: 0.5r 0.3fr 0.2fr;
   grid-gap: 32px;
 
@@ -68,23 +70,106 @@ body {
       &:hover {
         text-decoration: $lightblue;
       }
-      
     }
   }
 
   &__counter {
-    font-size:112px;
+    font-size: 112px;
     text-align: center;
-    font-weight:500;
+    font-weight: 500;
     line-height: 131px;
-    padding-top:72px;
+    padding-top: 72px;
   }
 
   &__img {
     position: absolute;
     z-index: -1;
+  } 
+}
+
+.header {
+  color: $white;
+}
+
+.history {
+  max-width: 280px;
+  margin: 0px auto;
+  
+  &__item{
+    list-style: none;
+    border-radius: 16px;
+    padding: 16px;
+    margin-top:4px;
+    margin-bottom: 4px;
+    background: $white;
+  }
+}
+.navigation {
+  
+  &__list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+
+    @media (max-width: $telephone) {
+      //flex-direction: column;
+      //display: none;
+      &--visible {
+        display: flex;
+      }
+    }
+  }
+
+  &__item {
+    display: block;
+    margin: 0 16px;
+    @media (max-width: $telephone) {
+      margin: 16px;
+    }
+  }
+
+  &__link {
+    color: $lightblue;
+    text-decoration: none;
+
+    &:hover {
+      color: $orange;
+      border-bottom: $hoverStyleLink; 
+    }
   }
 
   
+  &__switcher {
 
+    @media (min-width: $telephone) {
+      display: none;
+    }
+
+    @media (max-width: $telephone) {
+      border: none;
+      background: none;
+      position: absolute;
+      right: 16px;
+      top: 16px;
+      color: $white;
+    }
+  }
+  
+}
+
+.site-footer {
+  background: $white;
+  box-sizing: border-box;
+  left: 0;
+  padding: 8px;
+  position: fixed;
+  width: 100%;
+  top: 0; 
+
+  @media (max-width: $telephone) {
+    min-height: 48px;
+    top: unset;
+    bottom: 0;
+  }
 }
