--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,175 +1,127 @@
 @import "_normalize";
 @import "_variables";
-
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-  background: $oceanblue;
-  font-family: $robotFont;
-  height: 100vh;
-  min-width: 375px;
-  padding: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background: $oceanblue;
+    font-family: $robotFont;
+    height: 100vh;
+    min-width: 375px;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .glass {
-  max-width: 280px;
-  margin: 0px auto;
-  display: grid;
-  grid-template-areas:
-    "glass"
-    "add"
-    "remove";
-  grid-column: 0.5r 0.3fr 0.2fr;
-  grid-gap: 32px;
-
-  &__area {
-    grid-area: glass;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__button {
-    padding-right: 40px;
-    padding-left: 40px;
-    height: 47px;
-    border: none;
-
-    &--add {
-      grid-area: add;
-      background: $white;
-      box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 5px 25px 0 rgba(0, 0, 0, 0.19);
-      &:hover {
-        border: $lightblue 2px solid;
-      }
-      &:focus {
-        border: $lightblue 2px solid;
-      }
-    }
-
-    &__counter {
-      position: absolute;
-    }
-
-    &--remove {
-      grid-area: remove;
-      background: $oceanblue;
-      color: $lightgrey;
-      font-size: 14px;
-      &:hover {
-        text-decoration: $lightblue;
-      }
-    }
-  }
-
-  &__counter {
-    font-size: 112px;
-    text-align: center;
-    font-weight: 500;
-    line-height: 131px;
-    padding-top: 72px;
-  }
-
-  &__img {
-    position: absolute;
-    z-index: -1;
-  } 
-}
-
-.header {
-  color: $white;
-}
-
-.history {
-  max-width: 280px;
-  margin: 0px auto;
-  
-  &__item{
-    list-style: none;
-    border-radius: 16px;
-    padding: 16px;
-    margin-top:4px;
-    margin-bottom: 4px;
-    background: $white;
-  }
-}
-.navigation {
-  
-  &__list {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-
-    @media (max-width: $telephone) {
-      //flex-direction: column;
-      //display: none;
-      &--visible {
+    max-width: 280px;
+    margin: 0px auto;
+    display: grid;
+    grid-template-areas: "glass" "add" "remove";
+    grid-column: 0.5r 0.3fr 0.2fr;
+    grid-gap: 32px;
+    &__area {
+        grid-area: glass;
         display: flex;
-      }
+        justify-content: center;
+        align-items: center;
     }
-  }
-
-  &__item {
-    display: block;
-    margin: 0 16px;
-    @media (max-width: $telephone) {
-      margin: 16px;
+    &__button {
+        padding-right: 40px;
+        padding-left: 40px;
+        height: 47px;
+        border: none;
+        &--add {
+            grid-area: add;
+            background: $white;
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 5px 25px 0 rgba(0, 0, 0, 0.19);
+            &:hover {
+                border: $lightblue 2px solid;
+            }
+            &:focus {
+                border: $lightblue 2px solid;
+            }
+        }
+        &__counter {
+            position: absolute;
+        }
+        &--remove {
+            grid-area: remove;
+            background: $oceanblue;
+            color: $lightgrey;
+            font-size: 14px;
+            &:hover {
+                text-decoration: $lightblue;
+            }
+        }
     }
-  }
-
-  &__link {
-    color: $lightblue;
-    text-decoration: none;
-
-    &:hover {
-      color: $orange;
-      border-bottom: $hoverStyleLink; 
+    &__counter {
+        font-size: 112px;
+        text-align: center;
+        font-weight: 500;
+        line-height: 131px;
+        padding-top: 72px;
     }
-  }
-
-  
-  &__switcher {
-
-    @media (min-width: $telephone) {
-      display: none;
+    &__img {
+        position: absolute;
+        z-index: -1;
     }
+}
 
-    @media (max-width: $telephone) {
-      border: none;
-      background: none;
-      position: absolute;
-      right: 16px;
-      top: 16px;
-      color: $white;
+.navigation {
+    &__list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        justify-content: center;
     }
-  }
-  
+    &__item {
+        display: block;
+        margin: 0 16px;
+        @media (max-width: $telephone) {
+            margin: 16px;
+        }
+    }
+    &__link {
+        color: $oceanblue;
+        text-decoration: none;
+        &:hover {
+            color: $orange;
+            border-bottom: $hoverStyleLink;
+        }
+    }
+    &__switcher {
+        @media (min-width: $telephone) {
+            display: none;
+        }
+        @media (max-width: $telephone) {
+            border: none;
+            background: none;
+            position: absolute;
+            right: 16px;
+            top: 16px;
+            color: $white;
+        }
+    }
 }
 
 .site-footer {
-  background: $white;
-  box-sizing: border-box;
-  left: 0;
-  padding: 8px;
-  position: fixed;
-  width: 100%;
-  top: 0; 
-
-  @media (max-width: $telephone) {
-    min-height: 48px;
-    top: unset;
-    bottom: 0;
-  }
+    background: $white;
+    box-sizing: border-box;
+    left: 0;
+    padding: 8px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    @media (max-width: $telephone) {
+        min-height: 36px;
+    }
 }
