--- a/src/scss/history.scss
+++ b/src/scss/history.scss
@@ -1,15 +1,17 @@
 @import "_normalize";
 @import "_variables";
 .history {
-    max-width: 280px;
-    padding-top: 50px;
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+
     @media (max-width: $telephone) {
         max-width: 100%;
     }
     &__item {
         list-style: none;
-        border-radius: 16px;
+        border-radius: 8px;
         padding: 16px;
         margin-top: 4px;
         margin-bottom: 4px;
@@ -20,6 +22,11 @@
                 display: flex;
             }
         }
+    }
+
+    &__list {
+        padding: 0;
+        margin: 0;
     }
     &__photo {
         height: 16px;
