--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,33 +14,33 @@ body {
     background: $oceanblue;
     font-family: $robotFont;
     height: 100vh;
-    min-width: 375px;
-    padding: 16px;
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .glass {
-    max-width: 280px;
+    width: 100%;
+    max-width: 375px;
     margin: 0px auto;
-    display: grid;
-    grid-template-areas: "glass" "add" "remove";
-    grid-column: 0.5r 0.3fr 0.2fr;
-    grid-gap: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
     &__area {
-        grid-area: glass;
+        position: relative;
+        min-height: 280px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+    
     &__button {
         padding-right: 40px;
         padding-left: 40px;
         height: 47px;
         border: none;
         &--add {
-            grid-area: add;
+            margin-bottom: 24px;
             background: $white;
             box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 5px 25px 0 rgba(0, 0, 0, 0.19);
             &:hover {
@@ -50,11 +50,8 @@ body {
                 border: $lightblue 2px solid;
             }
         }
-        &__counter {
-            position: absolute;
-        }
+        
         &--remove {
-            grid-area: remove;
             background: $oceanblue;
             color: $lightgrey;
             font-size: 14px;
@@ -113,15 +110,16 @@ body {
     }
 }
 
-.site-footer {
+.site-header {
     background: $white;
     box-sizing: border-box;
     left: 0;
-    padding: 8px;
+    padding: 0;
     position: fixed;
     width: 100%;
     top: 0;
     @media (max-width: $telephone) {
-        min-height: 36px;
+        min-height: 24px;
+        max-height: 72px;
     }
 }
